crates/etas_tests/fixtures/compiler/projects/negative/missing_exported_item/src/app/util.es
module app.util;

public flow helper() -> unit {
    return;
}
